# V3R1C0R3---Vericore-

./: .env.example  .gitignore  README.md  doc.go  go.mod  go.sum  go.work  go.work.sum  package.json  pnpm-lock.yaml  turbo.json
.cursor/rules/: 000-v3r1c0r3-core.mdc  101-go-monolith.mdc  102-frontend-telemetry.mdc
.github/workflows/: build-and-attest.yml  release.yml
apps/api/: Dockerfile  enclave.go  finops.go  go.mod  healthtech.go  main.go  mcp.go  middleware.go  portal.go  swarm.go  telemetry.go
apps/web/: Dockerfile  instrumentation.ts  package.json  tsconfig.tsbuildinfo
apps/web/app/: TelemetryProvider.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/components/: KillSwitchDemo.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/finops/: page.tsx
apps/web/app/portal/: page.tsx
apps/web/app/verification/: page.tsx
apps/web/components/: TelemetryChart.tsx
apps/zk-health/: Cargo.toml  README.md
apps/zk-health/host/: Cargo.toml
apps/zk-health/host/src/: main.rs
apps/zk-health/methods/: Cargo.toml
apps/zk-health/methods/guest/: Cargo.toml
apps/zk-health/methods/guest/src/: main.rs
config/: deploy.api.yml  deploy.web.yml  deploy.yml  tetragon-policy.yaml
deploy/: kamal.yml
deploy/haproxy/: haproxy.cfg
deploy/tetragon/: audit-policy.yaml
docs/: compliance-mapping.md  compliance.md  local-e2e-and-infra.md
docs/architecture/: README.md
docs/architecture/decisions/: 001-causal-consistency-lsn.md
scripts/: e2e-local.sh  init-v3r1c0r3.sh
scripts/load_test/: go.mod  main.go
